terraform/k8s/flux-receiver.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-receiver
  namespace: flux-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9292
      protocol: TCP
      name: http
  selector:
    app: notification-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-receiver
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${FLUX_HOOK_DOMAIN}
      secretName: flux-hook-tls
  rules:
    - host: ${FLUX_HOOK_DOMAIN}
      http:
        paths:
          - path: /hook
            pathType: Prefix
            backend:
              service:
                name: flux-receiver
                port:
                  number: 80
